permission, role ve dealer için controller'lar tanımlandı